--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
 appdirs==1.4.3
+atomicwrites==1.3.0
 attrs==19.1.0
 black==19.3b0
 Click==7.0
+importlib-metadata==0.18
 invoke==1.2.0
+more-itertools==7.1.0
+packaging==19.0
+pluggy==0.12.0
+py==1.8.0
+pyparsing==2.4.0
+pytest==5.0.1
+six==1.12.0
 slack==0.0.2
 toml==0.10.0
+wcwidth==0.1.7
+zipp==0.5.1
