--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
             - run: source ./venv/bin/activate
             - restore_cache:
                 key: deps-pip-{{ .Branch }}-{{ checksum "requirements.txt" }}
-            - run: pip install -r requirements.txt
+            - run: python -m pip install -r requirements.txt
             - save_cache:
                 key: deps-pip-{{ .Branch }}-{{ checksum "requirements.txt" }}
                 paths:
