--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiohttp==3.5.4
 appdirs==1.4.3
 async-timeout==3.0.1
 atomicwrites==1.3.0
@@ -16,11 +17,12 @@ pluggy==0.12.0
 py==1.8.0
 pyparsing==2.4.0
 pytest==5.0.1
+pytest-mock==1.10.4
 six==1.12.0
+slack==0.0.2
 slackclient==2.1.0
 toml==0.10.0
 typing-extensions==3.7.4
 wcwidth==0.1.7
 yarl==1.3.0
 zipp==0.5.1
-aiohttp==3.5.4
